--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "nuxt": "^3.11.2",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
+  },
+  "devDependencies": {
+    "daisyui": "^4.12.10"
   }
 }
