--- a/package.json
+++ b/package.json
@@ -1,29 +1,34 @@
 {
   "name": "exchange-rate",
-  "version": "0.1.0",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/connectshark/exchange-rate"
   },
-  "type": "module",
+  "license": "MIT",
+  "version": "0.1.0",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "uipro": "uipro init --ai antigravity",
+    "preview": "vite preview --port 5050"
+  },
   "author": {
     "name": "Chambers Yeh",
     "url": "https://github.com/connectshark"
   },
-  "scripts": {
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview"
-  },
   "dependencies": {
-    "@nuxtjs/seo": "^2.0.0-rc.9",
-    "@nuxtjs/tailwindcss": "^6.12.0",
-    "chart.js": "^4.4.3",
-    "nuxt": "^3.11.2",
-    "vue": "^3.4.27",
-    "vue-router": "^4.3.2"
+    "@tailwindcss/vite": "^4.1.18",
+    "pinia": "^3.0.4",
+    "tailwindcss": "^4.1.18",
+    "vue": "^3.5.25",
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
-    "daisyui": "^4.12.10"
+    "@vitejs/plugin-vue": "^6.0.2",
+    "uipro-cli": "^2.1.3",
+    "unplugin-vue-router": "^0.19.0",
+    "vite": "^7.2.7",
+    "vite-plugin-vue-devtools": "^8.0.5"
   }
 }
